# backend-cvenom

./: .gitignore  Cargo.toml  README.md  Rocket.toml  config.yaml  cv.typ  cv_generator.db  cv_keyteo.typ  deploy.sh  dev.sh  ecosystem.config.js  font_validation.yaml  install_font_mac.sh  install_font_ubuntu.sh  old_config.yaml  repomix-output.md  setup_tenant.sh  start.sh  template.typ  tenants.csv
.github/workflows/: deploy.yml
data/: tenants.db
data/Abdallah/: README.md  cv_params.toml
data/john-doe/: README.md  cv_params.toml
data/mohamed-bennekrouf/: cv_params.toml  experiences_ar.typ  experiences_ch.typ  experiences_en.typ  experiences_fr.typ  experiences_head.typ
data/mohamed2/: README.md  cv_params.toml
old_data/: tenants.db
saved_data/: tenants.db
src/: auth.rs  config.rs  database.rs  environment.rs  font_validator.rs  generator.rs  image_validator.rs  lib.rs  main.rs  template_processor.rs  template_system.rs  tenant_cli.rs  utils.rs  web.rs  workspace.rs
src/core/: brand_store.rs  branding.rs  config_manager.rs  database.rs  fs_ops.rs  mod.rs  service_client.rs  template_engine.rs
src/email/: mod.rs  sender.rs  templates.rs
src/linkedin_analysis/: job_analyzer.rs  job_scraper.rs  mod.rs  semantic_client.rs  types.rs
src/types/: cv_data.rs  mod.rs  response.rs
src/web/: cors_utils.rs  file_handlers.rs  (+3 more)
templates/: common.typ  cv.typ  cv_keyteo.typ  experiences_keyteo_full_template.typ  experiences_template.typ  font_config.typ  person_template.toml  profile_template.toml  template.typ
tests/: api_scenarios.rs  template_compile.rs
(+91 files in other folders)
