[package]
name = "cvenom"
version = "0.1.0"
edition = "2021"

[lib]
name = "cv_generator"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.93"
async-recursion = "1.1.1"
chrono = { version = "0.4.41", features = ["serde"] }
csv = "1.3.1"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
rocket = { version = "0.5.1", features = ["json", "secrets"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.0", features = ["v4"] }
